tests/unit-fail/j048b.ref
Error: CEA5
Description: Computing pointer difference between two different objects.
Type: Undefined behavior.
See also: C11 sec. 6.5.6:9
  at f(j048b.c:2)
  at main(j048b.c:5)
  at <file-scope>(<unknown>)
